fix jumping menu on hover

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -270,6 +270,7 @@ blockquote {
 
     &--bright {
       opacity: 1;
+      width: 5em;
     }
   }
 
